--- a/OtelMvcProject/Views/Login/Index.cshtml
+++ b/OtelMvcProject/Views/Login/Index.cshtml
@@ -41,6 +41,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //particles -->
     <div class="w3ls-pos">
         <h1>Otel Misafir Giriş Sayfası</h1>
+        <h2 style="color:white">Rezervasyon Yapabilmek İçin Giriş Yapmanız Gerekmektedir!</h2>
         <div class="w3ls-login box">
             <!-- form starts here -->
             <form method="post">
@@ -63,7 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <!--copyright-->
         <div class="copy-wthree">
             <p>
-                © 2022 Particles Login Form. Tüm Hakları Saklıdır. | Design by
+                © 2022 Tüm Hakları Saklıdır. | Design by
                 <a href="http://w3layouts.com/" target="_blank">W3layouts</a>
             </p>
         </div>
