--- a/OtelMvcProject/Views/Rezervasyon/Index.cshtml
+++ b/OtelMvcProject/Views/Rezervasyon/Index.cshtml
@@ -76,32 +76,37 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                     <div class="clearfix"></div>
                 </div>
+                
                 <div class="bnr-one">
                     <div class="bnr-left">
                         <p>Ad Soyad</p>
                     </div>
                     <div class="bnr-right">
-                        <input type="text" />
-
+                        <input type="text" name="RezervasyonAdSoyad"/>
                     </div>
                     <div class="clearfix"></div>
                 </div>
+                
                 <div class="bnr-one">
                     <div class="bnr-left">
-                        <p>Oda Türü</p>
+                        <p>Telefon</p>
                     </div>
                     <div class="bnr-right">
-                        <select>
-                            <option value="volvo">Bir oda türü seçin</option>
-                            <option value="saab">Tek Kişilik</option>
-                            <option value="opel">Çift Kişilik</option>
-                            <option value="audi">Üç Kişilik</option>
-                            <option value="audi">Dört Kişilik</option>
-                            <option value="audi">Aile Suit</option>
-                        </select>
+                        <input type="text" name="Telefon" />
                     </div>
                     <div class="clearfix"></div>
                 </div>
+                
+                <div class="bnr-one">
+                    <div class="bnr-left">
+                        <p>Eklemek İstedikleriniz</p>
+                    </div>
+                    <div class="bnr-right">
+                        <input type="text" name="Aciklama" />
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+                
                 <div class="bnr-btn">                    
                         <input type="submit" value="Rezervasyon Yap">                    
                 </div>
