--- a/OtelMvcProject/Views/Rezervasyon/Index.cshtml
+++ b/OtelMvcProject/Views/Rezervasyon/Index.cshtml
@@ -48,7 +48,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <p>Giriş Tarihi</p>
                     </div>
                     <div class="bnr-right">
-                        <input class="date" id="datepicker" type="text" name="GirisTarih" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}" required="" />
+                        <input class="date" type="date" name="GirisTarih" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}" required="" />
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -57,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <p>Çıkış Tarihi</p>
                     </div>
                     <div class="bnr-right">
-                        <input class="date" id="datepicker1" type="text" name="CikisTarih" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}" required="" />
+                        <input class="date" type="date" name="CikisTarih" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}" required="" />
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -99,10 +99,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 
                 <div class="bnr-one">
                     <div class="bnr-left">
-                        <p>Eklemek İstedikleriniz</p>
+                        <p>Açıklama</p>
                     </div>
                     <div class="bnr-right">
-                        <input type="text" name="Aciklama" />
+                        <textarea name="Aciklama" rows="6" cols="38"></textarea>
                     </div>
                     <div class="clearfix"></div>
                 </div>
