--- a/OtelMvcProject/Views/Shared/_MisafirLayout.cshtml
+++ b/OtelMvcProject/Views/Shared/_MisafirLayout.cshtml
@@ -55,8 +55,12 @@
                             Rezervasyonlarım
                         </a>
                         <a class="nav-link collapsed" href="/Misafir/GelenMesajlar/"> 
-                            <div class="sb-nav-link-icon"><i class="fas fa-bookmark"></i></div>
-                            Mesajlarım
+                            <div class="sb-nav-link-icon"><i class="fas fa-inbox"></i></div>
+                            Gelen Mesajlar
+                        </a>
+                        <a class="nav-link collapsed" href="/Misafir/GidenMesajlar/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-share"></i></div>
+                            Giden Mesajlar
                         </a>
                         <a class="nav-link" href="/Rezervasyon/Index/">
                             <div class="sb-nav-link-icon"><i class="fas fa-suitcase"></i></div>
