--- a/OtelMvcProject/Views/Misafir/MesajDetay.cshtml
+++ b/OtelMvcProject/Views/Misafir/MesajDetay.cshtml
@@ -1,8 +1,24 @@
-﻿
+﻿@model OtelMvcProject.Models.Entity.TblMesaj2
+
 @{
     ViewBag.Title = "MesajDetay";
     Layout = "~/Views/Shared/_MisafirLayout.cshtml";
 }
-
-<h2>MesajDetay</h2>
+<br />
+<h2>Mesaj Detay</h2>
+<br />
+<label>Gönderen</label>
+@Html.TextBoxFor(x => x.Gonderen, new { @class = "form-control" })
+<br />
+<label>Alıcı</label>
+@Html.TextBoxFor(x => x.Alici, new { @class = "form-control" })
+<br />
+<label>Konu</label>
+@Html.TextBoxFor(x => x.Konu, new { @class = "form-control" })
+<br />
+<label>Tarih</label>
+@Html.TextBoxFor(x => x.Tarih, new { @class = "form-control" })
+<br />
+<label>Mesaj</label>
+@Html.TextAreaFor(x => x.Mesaj, 10, 4, new { @class = "form-control" })
 
