--- a/OtelMvcProject/Views/Default/Hakkimizda.cshtml
+++ b/OtelMvcProject/Views/Default/Hakkimizda.cshtml
@@ -135,6 +135,8 @@
         </div>
     </section>
     <!-- team -->
+
+    @Html.Action("Ekibimiz", "Default")
     <section class="team py-5" id="team">
         <div class="container py-lg-4 py-sm-3">
             <h3 class="title-big text-center mb-md-5 mb-4">Our Team</h3>
