--- a/OtelMvcProject/Views/Default/Hakkimizda.cshtml
+++ b/OtelMvcProject/Views/Default/Hakkimizda.cshtml
@@ -149,115 +149,13 @@
                             @x.Hakkimda4
                         </p>
                     </div>
-                    <div class="col-lg-6 main-cont-wthree-fea text-center">
-                        <div class="row">
-                            <div class="col-6 pr-2 mt-4">
-                                <div class="grids-speci1">
-                                    <span class="fa fa-users"></span>
-                                    <h3 class="title-spe">1200+</h3>
-                                    <p>Happy Clients</p>
-                                </div>
-                            </div>
-                            <div class="col-6 pl-2 mt-4">
-                                <div class="grids-speci1">
-                                    <span class="fa fa-camera"></span>
-                                    <h3 class="title-spe">18k+</h3>
-                                    <p>Luxury Rooms</p>
-                                </div>
-                            </div>
-                            <div class="col-6 pr-2 mt-4">
-                                <div class="grids-speci1">
-                                    <span class="fa fa-briefcase"></span>
-                                    <h3 class="title-spe">158</h3>
-                                    <p>Employers</p>
-                                </div>
-                            </div>
-                            <div class="col-6 pl-2 mt-4">
-                                <div class="grids-speci1">
-                                    <span class="fa fa-comments"></span>
-                                    <h3 class="title-spe">879+</h3>
-                                    <p>Services</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+                    @Html.Action("istatistik","Default")
+                    
                 </div>
 
             </div>
         </div>
     </section>
-    <section class="w3l-testimonials">
-        <!-- main-slider -->
-        <div class="testimonials py-5">
-            <div class="container text-center py-lg-3">
-                <div class="heading text-center mx-auto">
-                    <h3 class="title-big text-center">Our Testimonials</h3>
-                </div>
-                <div class="row">
-                    <div class="col-lg-10 mx-auto">
-                        <div class="owl-testimonial owl-carousel owl-theme">
-                            <div class="item">
-                                <div class="slider-info mt-lg-4 mt-3">
-                                    <div class="img-circle">
-                                        <img src="~/hotels-starter/assets/images/team1.jpg" class="img-fluid rounded" alt="client image">
-                                    </div>
-                                    <div class="message">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sit id
-                                        accusantium
-                                        officia quod quasi necessitatibus perspiciatis Harum error provident
-                                        quibusdam tenetur.
-                                    </div>
-                                    <div class="name">- Johnson</div>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="slider-info mt-lg-4 mt-3">
-                                    <div class="img-circle">
-                                        <img src="~/hotels-starter/assets/images/team2.jpg" class="img-fluid rounded" alt="client image">
-                                    </div>
-                                    <div class="message">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sit id
-                                        accusantium
-                                        officia quod quasi necessitatibus perspiciatis Harum error provident
-                                        quibusdam tenetur.
-                                    </div>
-                                    <div class="name">- Alexander</div>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="slider-info mt-lg-4 mt-3">
-                                    <div class="img-circle">
-                                        <img src="~/hotels-starter/assets/images/team3.jpg" class="img-fluid rounded" alt="client image">
-                                    </div>
-                                    <div class="message">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sit id
-                                        accusantium
-                                        officia quod quasi necessitatibus perspiciatis Harum error provident
-                                        quibusdam tenetur.
-                                    </div>
-                                    <div class="name">- Martina</div>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="slider-info mt-lg-4 mt-3">
-                                    <div class="img-circle">
-                                        <img src="~/hotels-starter/assets/images/team4.jpg" class="img-fluid rounded" alt="client image">
-                                    </div>
-                                    <div class="message">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sit id
-                                        accusantium
-                                        officia quod quasi necessitatibus perspiciatis Harum error provident
-                                        quibusdam tenetur.
-                                    </div>
-                                    <div class="name">- Elizabeth</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /main-slider -->
-
-    </section>
+    @Html.Action("Referans","Default")
 }
