--- a/OtelMvcProject/Views/Shared/_MisafirLayout.cshtml
+++ b/OtelMvcProject/Views/Shared/_MisafirLayout.cshtml
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Charts - SB Admin</title>
+    <title>MVC Otel Projesi & Hoş Geldiniz!</title>
     <link href="~/hotels-starter/WebMisafirPanel/dist/css/styles.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
 </head>
